[project]
name = "ppo"
version = "0.1.0"
description = ""
authors = [
    {name = "abdulhakeem",email = "abdulhakeemadefioye@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=1.9.0",
    "stable-baselines3>=1.1.0",
    "tensorboard>=2.5.0",
    "wandb>=0.11.1",
    "gymnasium (>=1.1.1,<2.0.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
